--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <div id="contanier"></div>
+    <div id="container"></div>
     <!-- <h1>hallo</h1> -->
 </body>
 </html>
